:sparkles: Added ZAAK.selectielijstklasse to the API
